fix font size for photo cropping

--- a/app/stylesheets/_management.sass
+++ b/app/stylesheets/_management.sass
@@ -211,6 +211,7 @@ form#edit_avatar
     margin: 1em 0 0 0 
   .crop_photo
     +sans
+    font-size: 0.8em
 
 .styled_button
   +styled-button
